@@ -1,0 +1,22 @@
+<?xml version="1.0" ?>
+<!DOCTYPE coverage
+  SYSTEM 'http://cobertura.sourceforge.net/xml/coverage-03.dtd'>
+<coverage branch-rate="0.5" line-rate="0.8" timestamp="1259288252325" version="3.2b4">
+	<!-- Generated by coverage.py: http://nedbatchelder.com/code/coverage -->
+	<packages>
+		<package branch-rate="0.5" complexity="0.0" line-rate="0.8" name=".">
+			<classes>
+				<class branch-rate="0.5" complexity="0.0" filename="y.py" line-rate="0.8" name="y">
+					<methods/>
+					<lines>
+						<line hits="1" number="3"/>
+						<line branch="true" hits="1" number="4"/>
+						<line hits="1" number="5"/>
+						<line hits="0" number="7"/>
+						<line hits="1" number="9"/>
+					</lines>
+				</class>
+			</classes>
+		</package>
+	</packages>
+</coverage>
